# labcoat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Readme.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TOOLCHAIN.md  brand.json  install-labcoat.sh  jest.config.cjs  jonatns-labcoat-0.3.0.tgz  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  runtime.json  rust-toolchain.toml  tsconfig.build.json  tsconfig.json  tsup.config.ts  vercel.json
.changeset/: monorepo-migration.md
.github/workflows/: ci.yml  release-binaries.yml  release-cli.yml  release-legacy-desktop.yml  release-npm.yml  release-pr.yml  release-runtime.yml  release.yml
apps/isomer/: .gitignore  LICENSE  README.md  RELEASING.md  espo_response.json  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
apps/isomer-extension/: package.json  popup.html  vite.config.ts
apps/isomer-extension/src/background/: index.ts  wallet.ts
apps/isomer-extension/src/content/: index.ts
apps/isomer-extension/src/popup/: App.tsx
apps/isomer/.github/workflows/: release-binaries.yml  release.yml
apps/isomer/apps/desktop/src/: App.tsx  index.css
apps/isomer/apps/desktop/src-tauri/src/: binary_manager.rs  commands.rs  config.rs  lib.rs  process_manager.rs
apps/isomer/apps/desktop/src/components/: ContractsPanel.tsx  ExplorerPanel.tsx  MiningPanel.tsx  ServiceCard.tsx  SettingsPanel.tsx  SetupScreen.tsx  Sidebar.tsx  StatusIndicator.tsx
apps/isomer/apps/desktop/src/components/Explorer/: BlockList.tsx  ExplorerHome.tsx
apps/isomer/apps/desktop/src/lib/: api.ts  types.ts
apps/isomer/apps/extension/: tsconfig.json  vite.config.ts
apps/isomer/apps/extension/public/: manifest.json
apps/isomer/apps/extension/src/popup/: index.css
apps/isomer/apps/extension/src/provider/: inpage.ts
apps/isomer/src/: App.tsx  index.css
apps/isomer/src-tauri/: Cargo.toml  tauri.conf.json
apps/isomer/src-tauri/icons/: icon.icns
apps/isomer/src-tauri/src/: binary_manager.rs  commands.rs  config.rs  lib.rs  main.rs  process_manager.rs  state.rs
apps/isomer/src/components/: ContractsPanel.tsx  Dashboard.tsx  ExplorerPanel.tsx  FaucetPanel.tsx  LogsPanel.tsx  MiningPanel.tsx  ServiceCard.tsx  SettingsPanel.tsx  SetupScreen.tsx  Sidebar.tsx  StatusIndicator.tsx
apps/isomer/src/components/Layout/: AppLayout.tsx  DevFaucet.tsx  Header.tsx
apps/isomer/src/components/Wallet/: WalletsPanel.tsx
apps/isomer/src/hooks/: useStatus.ts
apps/isomer/src/lib/: api.ts  store.ts  types.ts
apps/isomer/src/lib/rpc/: espoClient.ts
apps/web/: AGENTS.md  astro.config.ts  lighthouserc.json  package.json  playwright.config.ts  vercel.json
apps/web/scripts/: generate-og.mjs  sync-reference.mjs  verify-build.mjs
apps/web/src/components/: Brand.astro  CopyCommand.astro  DocsBanner.astro  Icon.astro  Mark.astro  ProtocolRunner.astro  ThemeToggle.astro
apps/web/src/content/docs/: 404.md
apps/web/src/content/docs/docs/: automation.md  contracts.md  devnet-wallets.md  index.md  migration.md  projects-configuration.md
apps/web/src/pages/: index.astro  install.ts  llms-full.txt.ts  llms.txt.ts  robots.txt.ts  skill.md.ts
apps/web/src/pages/docs/: [...slug].md.txt.ts
apps/web/src/pages/reference/: cli.json.ts
apps/web/src/styles/: fonts.css  global.css
apps/web/tests/: site.spec.ts  structure.spec.ts
crates/isomer-core/: Cargo.toml
crates/isomer-core/src/: alkanes_wallets.rs  binary_manager.rs  config.rs  devnet.rs  espo.rs  lib.rs  process_manager.rs  rpc.rs  state.rs
crates/labcoat-cli/: Cargo.toml
crates/labcoat-cli/src/: contract.rs  docs.rs  doctor.rs  main.rs  mcp.rs  project.rs  settings.rs  test_command.rs
crates/labcoat-cli/templates/contract/: Cargo.toml  test.rs
crates/labcoat-cli/templates/contract/src/: lib.rs
crates/labcoat-cli/templates/default/: AGENTS.md  Cargo.toml  SKILL.md  gitignore  labcoat.toml
crates/labcoat-cli/templates/default/contracts/counter/: Cargo.toml
crates/labcoat-cli/templates/default/contracts/counter/src/: lib.rs
crates/labcoat-cli/templates/default/contracts/example/: Cargo.toml
crates/labcoat-cli/templates/default/contracts/example/src/: lib.rs
crates/labcoat-cli/templates/default/crates/shared/: Cargo.toml
crates/labcoat-cli/templates/default/crates/shared/src/: lib.rs
crates/labcoat-cli/templates/default/src/: lib.rs
crates/labcoat-cli/templates/default/tests/: counter.rs  example.rs
crates/labcoat-core/: Cargo.toml
crates/labcoat-core/src/: abi.rs  compile.rs  error.rs  execute.rs  lib.rs  lockfile.rs  simulate.rs  sync.rs  system.rs  toolkit.rs  trace.rs  wallet.rs  workspace.rs
crates/labcoat-test/: Cargo.toml  RELEASE_TRIGGER
crates/labcoat-test/src/: lib.rs
docs/: BRAND.md  DURABLE-STATE-PLAN.md  MIGRATING.md  RELEASING.md  index.md  package-lock.json  package.json
docs/migration/: ANNOUNCEMENT.md  COUPLING.md  OYL-AUDIT.md  TEST-PLAN.md
docs/src/app/: layout.tsx  page.mdx
docs/src/app/getting-started/: page.mdx
scripts/: install-isomer.sh  validate-brand.mjs
scripts/devnet-smoke/: install-stubs.sh  stub-bitcoind  stub-jsonrpc.js  stub-service
scripts/release/: render-release-notes.mjs  update-release-trigger.mjs  validate-release.mjs
scripts/tests/: install-labcoat-test.sh  release-notes-test.mjs  release-validation-test.sh
skills/: README.md  SKILL.md
src/: account.ts  cli.ts  compiler.ts  config.ts  contract.ts  deploy.ts  encoder.ts  execute.ts  helpers.ts  index.ts  runtime.ts  simulate..ts  types.ts  utils.ts  wallet.ts
src/__tests__/: compiler.test.ts
src/cli/: index.ts
src/cli/commands/: compile.ts  index.ts  init.ts  run.ts  test.ts
src/runtime/: assertions.ts  test-runner.ts
src/sdk/: compiler.ts  config.ts  deploy.ts  helpers.ts  manifest.ts  runtime.ts  types.ts  wallet.ts
src/sdk/utils/: ts-runner.ts
src/utils/: ts-runner.ts
templates/default/: .gitignore  alkali.config.js  package.json  tsconfig.json
templates/default/contracts/: Example.rs
templates/default/scripts/: deploy.ts  do-something.ts  greet.ts
(+14 files in other folders)
