[workspace]
resolver = "2"
members = [
    "crates/isomer-core",
    "crates/labcoat-core",
    "crates/labcoat-cli",
    "apps/isomer/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jonatns/labcoat"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"

# Hard constraint (see TOOLCHAIN.md): every alkanes-rs dependency is pinned
# to a commit on the *develop* branch — never `main`, never a branch ref.
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d" }
alkanes-cli-common = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d", default-features = false, features = ["std"] }
alkanes-cli-sys = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d" }
