[workspace]
resolver = "2"
members = [
    "crates/isomer-core",
    "crates/labcoat-core",
    "crates/labcoat-cli",
    "crates/labcoat-test",
    "apps/isomer/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jonatns/labcoat"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
toml = "0.8"

# Hard constraint (see TOOLCHAIN.md): every alkanes-rs dependency is pinned
# to a commit on the *develop* branch — never `main`, never a branch ref.
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d" }
# NOTE: alkanes-cli-sys is NOT used — at the pinned rev it fails to compile
# (its EnhancedExecuteParams initializer is missing fields added 2026-07-12).
# labcoat-core bootstraps ConcreteProvider from alkanes-cli-common directly.
# native-deps is REQUIRED: upstream cfg-gates its whole HTTP client on it
# (without it every RPC method returns "not available in WASM environment").
alkanes-cli-common = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d", default-features = false, features = ["std", "native-deps"] }

# NOTE on transitive git deps: alkanes-rs declares metashrew/emasm as moving
# branch refs. Cargo forbids [patch]-ing a git source with itself at a rev,
# so the reproducibility pin is the committed Cargo.lock (which records the
# exact commits, e.g. metashrew@eca790ca) enforced by `--locked` in CI.
# Never run a bare `cargo update` — see TOOLCHAIN.md upgrade procedure.
