[package]
name = "isomer-core"
version = "0.1.0"
publish = false
description = "Headless Alkanes devnet engine: binary management, service orchestration, chain control"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3.31"
bytes = "1.11.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
