[package]
name = "labcoat-cli"
version = "0.1.0"
description = "Labcoat command-line interface"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "labcoat"
path = "src/main.rs"

[dependencies]
isomer-core = { path = "../isomer-core" }
labcoat-core = { path = "../labcoat-core" }
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
