[package]
name = "labcoat-cli"
version.workspace = true
publish = false
description = "Labcoat is the Rust-native CLI for building, testing, and operating Alkanes smart contracts with a complete local Bitcoin devnet."
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "labcoat"
path = "src/main.rs"

[dependencies]
isomer-core = { path = "../isomer-core" }
labcoat-core = { path = "../labcoat-core" }
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
sha2 = "0.10"
hex = "0.4"
serde_json.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml.workspace = true
