[package]
name = "labcoat-core"
version = "0.7.0"
description = "Alkanes smart-contract toolkit core: compile, deploy, call, simulate, trace"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmi.workspace = true
hex = "0.4"
bitcoin = "0.32.4"
prost = "0.12.6"
flate2 = "1.0"
sha2 = "0.10"

# Pinned alkanes-rs develop commit (see TOOLCHAIN.md) — the whole point of
# this crate is to replace @oyl/sdk with these.
alkanes-support.workspace = true
alkanes-cli-common.workspace = true

[dev-dependencies]
wat = "1"
