[package]
name = "isomer"
version = "0.1.0"
description = "One-click Alkanes development environment"
authors = ["Alkanes Team"]
edition = "2021"

[lib]
name = "isomer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# HTTP client for downloading binaries and RPC calls
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Process management
portable-pty = "0.8"

# File system utilities
dirs = "6"
sha2 = "0.10"
hex = "0.4"

# Archive extraction
tar = "0.4"
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async channels for event streaming
async-channel = "2"
futures-util = "0.3.31"
bytes = "1.11.0"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"
