[package]
name = "isomer"
version = "0.1.1"
description = "One-click Alkanes development environment"
authors = ["Alkanes Team"]
edition = "2021"

[lib]
name = "isomer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
isomer-core = { path = "../../../crates/isomer-core" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
