[package]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
# Keep these revisions synchronized with the Labcoat release and TOOLCHAIN.md.
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", rev = "5b7f43567b828d0bb7b8907ce78fa0242943c54d" }
metashrew-support = { git = "https://github.com/kungfuflex/metashrew", branch = "develop" }
anyhow = "1.0"

# Direct contract dependencies pin transitive releases to Rust 1.86-compatible versions.
serde_with = { version = "=3.16.1", default-features = false }
time = { version = "=0.3.44", default-features = false }

[dev-dependencies]
labcoat-test = "={{LABCOAT_VERSION}}"
